Restore index.html to original state
Restored the original content of index.html after a complete overwrite.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .hero-section {
             background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('hero-bg.jpg') center/cover;
             min-height: 100vh;
-            color: #d5ff4d;
+            color: #0e2ddb;
             display: flex;
             align-items: center;
         }
