bg color changed to background-color: #5232f0;
By regis

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     --text-on-accent: #06195e;
 }
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('hero-bg.jpg') center/cover;
+            background-color: #5232f0;
             min-height: 100vh;
             color: #0e2ddb;
             display: flex;
@@ -261,3 +261,4 @@
     </script>
 </body>
 </html>
+
