Refactor styles in index.html
Updated styles for hero section and button colors.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .hero-section {
             background-color: #5232f0;
             min-height: 100vh;
-            color: #0e2ddb;
+            color: #d5ff4d;
             display: flex;
             align-items: center;
         }
@@ -127,6 +127,7 @@
     
 
 <!-- Hero Section -->
+ 
     <section class="hero-section">
         <div class="container text-center">
             <h1 class="display-4 mb-4 animate__animated animate__fadeInDown">Your Trusted IT Solutions Partner</h1>
@@ -261,4 +262,3 @@
     </script>
 </body>
 </html>
-
